buildscript {
    repositories {
        mavenCentral()
        jcenter()
        maven {
            name = "forge"
            url = "https://files.minecraftforge.net/maven"
        }
    }

    
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1+'
    }
}


plugins {
    id 'com.matthewprenger.cursegradle' version '1.4.0'
    id 'de.undercouch.download' version '3.3.0'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'idea'
apply plugin: 'eclipse'
apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'


configurations {
    optionalRuntime
    runtime.extendsFrom optionalRuntime // optionalRuntime dependencies are downloaded but not exported to POM
}

sourceSets{
    main {
        java{
            exclude '**/mca_old/*'
            exclude '**/abyssalcraft/*'
            exclude '**/toroquest/*'
            exclude '**/consecration/*'
        }
    }
}

idea {
    module {
        for (String excludeDirName in ["run", "out", "logs", "gradle"]) {
            File excludeDir = new File(projectDir, excludeDirName)
            excludeDirs.add(excludeDir)
        }
    }
}


group = "de.teamlapen.vampirism_integrations"
archivesBaseName = "VampirismIntegrations"
java.toolchain.languageVersion = JavaLanguageVersion.of(17)
ext.mod_version = "Test"
ext.type = "Test"
ext.classification="test"

apply from: 'gradle/artifacts.gradle'
apply from: 'gradle/versioning.gradle'
apply from: 'gradle/forge.gradle'
apply from: 'gradle/deploy.gradle'
